--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
   <li><em>2024</em>, China International College Students’ Innovation Competition, <strong>Silver Award</strong> (nation-wide)</li>
   <li><em>2023</em>, First Class Scholarship (school-wide) </li>
   <li><em>2022</em>, The International Mathematical Contest in Modeling, <strong>Outstanding Winne (23/15,105=0.15%)</strong></li>
-  <li><em>2022/2021</em>, National Encouragement Scholarshi (nation-wide)</li>
+  <li><em>2022/2021</em>, National Encouragement Scholarship (nation-wide)</li>
 
 </ul>
 
