--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <br>
           Xu Zhang, <strong>Qinghua Wang</strong>, Mengyang Zhao, Fang Wang, and Cunquan Qu
           <br>
-           The Transactions on Knowledge and Data Engineering <strong>(TKDE)</strong>, Major Reversion <br>
+           IEEE Transactions on Knowledge and Data Engineering <strong>(TKDE)</strong>, Major Reversion <br>
         </div>
         </div>
       </td>
