--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
        </div>
        M.S in Data Science (<strong>
          Mathematics, 
-         GPA: 87.82 / 100</strong>)
+         GPA: 88.41 / 100</strong>)
      </p>
    </li>
    <li>
@@ -320,6 +320,8 @@
 
 <h2>Honors and Awards</h2>
 <ul>
+  <li><em>2025</em>, National Scholarship (school-wide) </li>
+  <li><em>2025</em>, Second Class Academic Scholarship (school-wide) </li>
   <li><em>2024</em>, China International College Students’ Innovation Competition, <strong>Silver Award</strong> (nation-wide)</li>
   <li><em>2023</em>, First Class Scholarship (school-wide) </li>
   <li><em>2022</em>, The International Mathematical Contest in Modeling, <strong>Outstanding Winne (23/15,105=0.15%)</strong></li>
