--- a/index.html
+++ b/index.html
@@ -320,12 +320,13 @@
 
 <h2>Honors and Awards</h2>
 <ul>
-  <li><em>2025</em>, National Scholarship (school-wide) </li>
+  <li><em>2025</em>, National Scholarship (nation-wide) </li>
   <li><em>2025</em>, Second Class Academic Scholarship (school-wide) </li>
+  <li><em>2024</em>, Third Class Academic Scholarship (school-wide) </li>
+  <li><em>2022</em>, First Class Scholarship (school-wide) </li>
+  <li><em>2021/2020</em>, National Encouragement Scholarship (nation-wide)</li>
   <li><em>2024</em>, China International College Students’ Innovation Competition, <strong>Silver Award</strong> (nation-wide)</li>
-  <li><em>2023</em>, First Class Scholarship (school-wide) </li>
   <li><em>2022</em>, The International Mathematical Contest in Modeling, <strong>Outstanding Winne (23/15,105=0.15%)</strong></li>
-  <li><em>2022/2021</em>, National Encouragement Scholarship (nation-wide)</li>
 
 </ul>
 
